--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,8 +3,9 @@
 }
 
 .global {
-  /* box-shadow: 0px 20px 20px 0px #585858; */
+  box-shadow:  0px 12px 19px #222222;
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 body {
@@ -21,7 +22,8 @@ body {
 }
 
 header,
-section {
+section,
+footer {
   width: 1300px;
 }
 
@@ -34,10 +36,16 @@ header {
   justify-content: center;
   text-shadow: 1px 1px 5px rgb(37, 37, 37);
 }
-
+footer {
+  padding-top: 50px;
+  background-color: rgb(248, 248, 248);
+  height: 500px;
+  display: flex;
+  justify-content: center;
+}
 section {
   background-color: rgb(248, 248, 248);
-  height: 1000px;
+  height: 1557px;
 }
 
 .container-menu {
@@ -160,118 +168,126 @@ nav {
   color: #ccc;
 
   margin-bottom: 80px;
-
 }
 .frameworks-icon-bar img {
-    width: 25px;
+  width: 25px;
 }
 .frameworks-icon-bar span {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 .desc {
-    text-align: center;
-    font-size: xx-large;
+  text-align: center;
+  font-size: xx-large;
 }
 .widget-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 .widget {
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    text-align: center;
-    align-items: center;
-    margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  text-align: center;
+  align-items: center;
+  margin-right: 10px;
 }
 .widget-title {
-    font-size: x-large;
-    margin-bottom: 10px;
+  font-size: x-large;
+  margin-bottom: 10px;
 }
 .widget-img {
-    width: 100px;
+  width: 100px;
 }
 .desc {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 .widget-desc {
-    color:#000000a3;
+  color: #000000a3;
 }
 .section-midle {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 .section-midle img {
-    margin-right: 80px;
+  margin-right: 80px;
 }
 .section-midle-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .section-midle-container h1 {
-    font-size: xx-large;
-    margin-bottom: 20px;
+  font-size: xx-large;
+  margin-bottom: 20px;
 }
 .section-midle-container h4 {
-    font-weight: normal;
-    color: rgb(47, 47, 47);
+  font-weight: normal;
+  color: rgb(47, 47, 47);
 }
 .section-midle-container a {
-    width: 100px;
-    margin-top: 20px;
-    padding: 15px;
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    background-color: rgba(5, 178, 200, 0.7);
-    border-radius: 5px;
-    text-align: center;
+  width: 100px;
+  margin-top: 20px;
+  padding: 15px;
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  background-color: rgba(5, 178, 200, 0.7);
+  border-radius: 5px;
+  text-align: center;
 }
 .section-bottom {
-    display: flex;
+  display: flex;
 }
 .section-bottom-left {
-    background-image: url("https://static.wixstatic.com/media/39ed83_8a3879d27fbc46d0854c32ffad394f71~mv2.jpg");
-    background-size:cover;
-    /* width: 650px; */
-    height: 450px;
-    background-position: left;
-    flex: 1;
+  background-image: url("https://static.wixstatic.com/media/39ed83_8a3879d27fbc46d0854c32ffad394f71~mv2.jpg");
+  background-size: cover;
+  /* width: 650px; */
+  height: 450px;
+  background-position: left;
+  flex: 1;
 }
 .section-bottom-right {
-    background-color:rgba(5, 178, 200, 0.7) ;
-    flex: 1;
+  background-color: rgba(5, 178, 200, 0.7);
+  flex: 1;
 
-    display: flex;
+  display: flex;
 }
 .section-bottom-right-intern {
-    padding: 50px;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  padding: 50px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .right-title {
-    font-size: xx-large;
-    font-weight: bold;
+  font-size: xx-large;
+  font-weight: bold;
 }
-.section-bottom-right-intern .right-desc p{
-    margin-top: 8px;
-    color: rgba(255, 255, 255, 0.726);
+.section-bottom-right-intern .right-desc p {
+  margin-top: 8px;
+  color: rgba(255, 255, 255, 0.726);
 }
 
 .section-bottom-right-intern .right-desc :last-child {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-.right-ul li{
-    margin-bottom: 15px;
-    color:rgba(255, 255, 255, 0.726);
+.right-ul li {
+  margin-bottom: 15px;
+  color: rgba(255, 255, 255, 0.726);
 }
-.right-ul ul{
-    list-style: url("../images/icons8-checkmark.svg");
+.right-ul ul {
+  list-style: url("../images/icons8-checkmark.svg");
+}
+
+.flexwrap {
+  flex-wrap: wrap;
+  width: 400px;
+}
+
+footer img {
+  width: 600px;
 }
